objects/redwing__Task_Rating__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Order__c</fullName>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Rating__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rating</label>
        <referenceTo>redwing__Rating__c</referenceTo>
        <relationshipLabel>Task Ratings</relationshipLabel>
        <relationshipName>Task_Ratings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Task__c</fullName>
        <label>Task</label>
        <referenceTo>redwing__Task__c</referenceTo>
        <relationshipLabel>Task Ratings</relationshipLabel>
        <relationshipName>Task_Ratings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>redwing__Weight__c</fullName>
        <label>Weight</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Task Rating</label>
    <nameField>
        <displayFormat>TR-{00000000}</displayFormat>
        <label>Task Rating Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>